# no-copy-rs

./: Cargo.toml  README.md
src/: lib.rs  ops_impl.rs
